--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
 		<div class="header">	
 			<div class="top-header">				
 				<div class= "top-header__burger-and-company-logo">
-					<div class="top-header__burger-icon-block"><a href="#"><img src="img/burger.png" alt="" class="top-header__burger-icon"></a>
+					<div class="top-header__burger-icon-block">
+						<button class="top-header__btn-burger-icon"> </button>
 					</div>
-					<div class="top-header__company-logo-block"><a href="#"><img src="img/company-logo.png" alt="логотип компании" class="top-header__company-logo"></a>
+					<div class="top-header__company-logo-block">
+						<a href="#"><img src="img/company-logo.png" alt="логотип компании" class="top-header__company-logo"></a>
 					</div>
 				</div>	
 				<div class="top-header__all-icons">
 					<div class="top-header__icons-call-mess-prof">
-						<a href="#"><img src="img/call.png" alt="" class="top-header__icon-call"></a>
-						<a href="#"><img src="img/chat.png" alt="" class="top-header__icon-mess"></a>
-						<a href="#"><img src="img/profile.png" alt="" class="top-header__icon-profile"></a>
-					</div>				
+						<button class="top-header__btn-icon-call"><button>
+						<button  class="top-header__btn-icon-mess"><button>
+						<button  class="top-header__btn-icon-profile"><button>
+					</div>	
 					<div class="top-header__two-icon-cont">
 						<div class="top-header__new-order">
 							<a href="#" class="top-header__link-name1 top-header__link-name1_hidden">Оставить заявку</a>
-							<a href="#"><img src="img/repair.svg" class="top-header__link1-icon" alt=""></a>
+							<button class="top-header__new-order-button"></button>
 						</div>
 						<div class="top-header__check-status">
 							<a href="#" class="top-header__link-name2 top-header__link-name2_hidden">Статус ремонта</a>
-							<a href="#"><img src="img/checkstatus.svg" class="top-header__link2-icon" alt=""></a>
+							<button class="top-header__check-status-button"></button>
 						</div>		
 					</div>	
 				</div>	
@@ -66,8 +68,7 @@
 			  		Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.
 			  	</p>
 			  	<div class="text-contaner__read-more-contaner">
-			  		<img src="img/read-more.png" alt="" class="text-contaner__read-more-icon">
-			  		<a href="#" class="text-contaner__read-more"><b>Читать далее</b></a>
+			  		<button class="text-contaner__read-more-icon-btn">Читать далее</button>			  		
 			  	</div>	
 			</div>			  		
 			<div class="text-contaner__image-block">
