--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				</div>	
 				<div class="top-header__all-icons">
 					<div class="top-header__icons-call-mess-prof">
-						<button class="top-header__btn-icon-call"><button>
-						<button  class="top-header__btn-icon-mess"><button>
-						<button  class="top-header__btn-icon-profile"><button>
+						<button class="top-header__btn-icon-call"></button>
+						<button  class="top-header__btn-icon-mess"></button>
+						<button  class="top-header__btn-icon-profile"></button>
 					</div>	
 					<div class="top-header__two-icon-cont">
 						<div class="top-header__new-order">
