--- a/mob-menu.html
+++ b/mob-menu.html
@@ -35,9 +35,9 @@
 			<div class="bottom">
 				<div class="bottom-info-block">
 					<div class="icons-call-mess-prof">
-						<button class="icons-call-mess-prof__call-btn"><button>
-						<button  class="icons-call-mess-prof__mess-btn"><button>
-						<button  class="icons-call-mess-prof__prof-btn"><button>
+						<button class="icons-call-mess-prof__call-btn"></button>
+						<button  class="icons-call-mess-prof__mess-btn"></button>
+						<button  class="icons-call-mess-prof__prof-btn"></button>
 					</div>	
 					<div class="mail-block">
 						<span class="mail-block__e-mail-text">mail@cps.com</span>
