--- a/mob-menu.html
+++ b/mob-menu.html
@@ -8,48 +8,48 @@
 	<link rel="stylesheet" type="text/css" href="fonts/stylesheet.css">
 </head>	
 	<body>	
-		<div class="mob-menu-block">
-			<div class="icons-and-menu-block">
-				<div class="top-icons">
-					<div class="burger-and-logo-cont">
-						<button class="burger-and-logo-cont__burger-icon"></button>
-						<div class="burger-and-logo-cont__logo-cont">
-							<a href="#"><img src="img/company-logo.png" alt="логотип компании" class="burger-and-logo-cont__company-logo"></a>			
+		<div class="section">
+			<div class="menu-wrapper">
+				<div class="header-wrapper">
+					<div class="header-button-wrapper">
+						<button class="button header-button-wrapper__btn-icon"></button>
+						<div class="header-button-wrapper__img-contaner">
+							<a href="#"><img src="img/company-logo.png" alt="логотип компании" class="header-button-wrapper__company-logo"></a>			
 						</div>
 					</div>
-					<button class="search-btn"></button>
+					<button class="button header-wrapper__search-btn"></button>
 				</div>
-				<nav class="menu-cont">
-					<ul class="menu-cont__list">
-						<li class="menu-cont__item menu-cont__item1"><a href="#" class="menu-cont__link menu-cont__link1">Ремонт техники</a></li>
-						<li class="menu-cont__item"><a href="#" class="menu-cont__link">Услуги и сервисы</a></li>
-						<li class="menu-cont__item"><a href="#" class="menu-cont__link">Корпоративным клиентам</a></li>
-						<li class="menu-cont__item"><a href="#" class="menu-cont__link">Продавцам техники</a></li>
-						<li class="menu-cont__item"><a href="#" class="menu-cont__link">Партнерам</a></li>
-						<li class="menu-cont__item"><a href="#" class="menu-cont__link">Производителям</a></li>
-						<li class="menu-cont__item"><a href="#" class="menu-cont__link">Наши сервисные центры</a></li>
-						<li class="menu-cont__item"><a href="#" class="menu-cont__link">Контакты</a></li>
+				<nav class="menu">
+					<ul class="menu-list">
+						<li class="menu-list__item menu-list__item--active"><a href="#" class="menu-list__link menu-list__link--active">Ремонт техники</a></li>
+						<li class="menu-list__item"><a href="#" class="menu-list__link">Услуги и сервисы</a></li>
+						<li class="menu-list__item"><a href="#" class="menu-list__link">Корпоративным клиентам</a></li>
+						<li class="menu-list__item"><a href="#" class="menu-list__link">Продавцам техники</a></li>
+						<li class="menu-list__item"><a href="#" class="menu-list__link">Партнерам</a></li>
+						<li class="menu-list__item"><a href="#" class="menu-list__link">Производителям</a></li>
+						<li class="menu-list__item"><a href="#" class="menu-list__link">Наши сервисные центры</a></li>
+						<li class="menu-list__item"><a href="#" class="menu-list__link">Контакты</a></li>
 					</ul>
 				</nav>
 			</div>		
-			<div class="bottom">
-				<div class="bottom-info-block">
-					<div class="icons-call-mess-prof">
-						<button class="icons-call-mess-prof__call-btn"></button>
-						<button  class="icons-call-mess-prof__mess-btn"></button>
-						<button  class="icons-call-mess-prof__prof-btn"></button>
+			<div class="info-wrapper">
+				<div class="info info-bottom">
+					<div class="icon-buttons">
+						<button class="button icon-buttons__call-btn"></button>
+						<button  class="button icon-buttons__mess-btn"></button>
+						<button  class="button icon-buttons__profile-btn"></button>
 					</div>	
-					<div class="mail-block">
-						<span class="mail-block__e-mail-text">mail@cps.com</span>
+					<div class="mail mail-bottom">
+						<a href="mailto: mail@cps.com" class="mail__e-mail">mail@cps.com</a>
 					</div>
-					<div class="tel-number-block">
-						<span class="tel-number-block__tel-text">8 800 890 8900</span>
+					<div class="contacts tel-number">
+						<a href="tel: 8 800 890 8900" class="contacts__telephone">8 800 890 8900</a>
 					</div>
 				</div>	
-				<div class="change-lang-block">
-					<a class="change-lang-block__item change-lang-block__item1">RU</a>
-					<a href="#" class="change-lang-block__item">EN</a>
-					<a href="#" class="change-lang-block__item">CH</a>
+				<div class="link-wrapper change-lang-block">
+					<a class="link-wrapper__item link-wrapper__item--active">RU</a>
+					<a href="#" class="link-wrapper__item">EN</a>
+					<a href="#" class="link-wrapper__item">CH</a>
 				</div>
 			</div>	
 		</div>	
